--- a/src/componentes/Time/Time.css
+++ b/src/componentes/Time/Time.css
@@ -9,3 +9,10 @@
     display: inline-block;
     padding-bottom: 8px;
 }
+
+.time .colaboradores {
+    display: flex;
+    justify-content: space-aroud;
+    margin-top: 32px;
+    flex-wrap: wrap;
+}
